# systemctl-manager

./: Cargo.toml  LICENSE  README.md
src/: main.rs  prelude.rs  tui.rs
src/prelude/: position.rs  size.rs
src/tui/: annotatedstring.rs  annotation.rs  annotationtype.rs  command.rs  operation.rs  terminal.rs  tuistatus.rs  uicomponents.rs
src/tui/annotatedstring/: annotatedstringiterator.rs  annotatedstringpart.rs
src/tui/command/: edit.rs  movecommand.rs  system.rs
src/tui/terminal/: attribute.rs
src/tui/uicomponents/: filterbar.rs  messagebar.rs  searchbar.rs  statusbar.rs  uicomponent.rs  view.rs
src/tui/uicomponents/view/: buffer.rs  highlighter.rs  searchdirection.rs  searchinfo.rs  searchresulthighlighter.rs
src/tui/uicomponents/view/buffer/: service.rs
