[package]
name = "systemctl-manager"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "A simple utility to interact with systemd services through a TUI (Vim-Keys)."
readme = "README.md"
authors = ["yarso-su (https://github.com/yarso-su)"]
repository = "https://github.com/yarso-su/systemctl-manager"
keywords = ["systemd", "tui", "systemctl", "linux"]
categories = ["command-line-utilities"]

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
